chuyển sang ReBAC, gỡ module group/ads/report và xoá toàn bộ comment
Phân quyền:
- thêm RebacEngine + RebacModel, ObjectRef, Relation, RelationResolver và 4
  resolver (post, comment, message, platform)
- gỡ các *AccessGuard và OwnershipGuard; PermissionCatalog chỉ còn phục vụ
  domain chưa migrate

Gỡ module: group, advertisement/advertiser, report cùng test và các loại
notification GROUP_*.

Phân trang: thêm OffsetPage/CursorPage, countVisible và findVisibleIds có
lọc content cho PostRepository.

Comment: xoá toàn bộ javadoc, block comment và comment dòng trong src/,
comment # trong application.yml/.env.example/Dockerfile/docker-compose.yml,
comment -- trong scripts/*.sql. Không có dòng code nào thay đổi trong bước
này; main và test đều compile lại được.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_0187NTHJbQk9WnjtT48HmuX2